--- a/resume.css
+++ b/resume.css
@@ -135,6 +135,14 @@ hr {
 .chip2 i {
     margin-right: 5px;
 }
+.careerTimeline{
+    margin-bottom: 9px;
+}
+.profileSummary p {
+    font-size: 16px;
+    margin: 10px 0 20px;
+    line-height: 25px;
+}
 
 .careerTimeline {
     margin-bottom: 9px;
